--- a/templates/inventory/item_detail.html
+++ b/templates/inventory/item_detail.html
@@ -213,6 +213,11 @@
 {% endblock %}
 
 {% block content %}
+<!-- Hidden CSRF token for JavaScript forms -->
+<form class="d-none">
+    {% csrf_token %}
+</form>
+
 <div class="container-fluid">
     <!-- Header -->
     <div class="item-header">
@@ -462,6 +467,9 @@
                     <button class="btn btn-action btn-outline-primary" onclick="printBarcode()">
                         <i class="fas fa-barcode me-2"></i>Print Barcode
                     </button>
+                    <button type="button" class="btn btn-action btn-danger" onclick="confirmDelete('{{ item.pk }}', '{{ item.name|escapejs }}')">
+                        <i class="fas fa-trash me-2"></i>Delete Item
+                    </button>
                 </div>
             </div>
 
@@ -517,12 +525,12 @@
 </div>
 
 <script>
-function confirmDelete() {
-    if (confirm('Are you sure you want to delete this item? This action cannot be undone.')) {
+function confirmDelete(itemId, itemName) {
+    if (confirm(`Are you sure you want to delete "${itemName}"? This action cannot be undone.`)) {
         // Create form to submit delete request
         const form = document.createElement('form');
         form.method = 'POST';
-        form.action = '/business/{{ request.tenant.slug }}/inventory/items/{{ item.pk }}/delete/';
+        form.action = `/business/{{ request.tenant.slug }}/inventory/items/${itemId}/delete/`;
         
         // Add CSRF token
         const csrfInput = document.createElement('input');
