--- a/templates/services/service_detail.html
+++ b/templates/services/service_detail.html
@@ -46,6 +46,10 @@
                 <i class="fas fa-edit"></i>
                 Edit Service
             </a>
+            <button type="button" class="btn btn-outline-danger" onclick="deleteService('{{ service.id }}')">
+                <i class="fas fa-trash"></i>
+                Delete Service
+            </button>
             {% endif %}
             <button class="btn btn-primary" onclick="addToOrder('{{ service.id }}')">
                 <i class="fas fa-plus"></i>
